# Skynet_Music

./: .env.example  .gitignore  README.md  check.sh  docker-compose.yml
backend/: Dockerfile  package.json
backend/src/: db.js  index.js
backend/src/middleware/: auth.js
backend/src/routes/: admin.js  auth.js  featured.js  home.js  import.js  mixes.js  music.js  radio.js  stats.js  userData.js  youtube.js
backend/src/seeds/: collections.json  popular-songs.json  seed-collections.js  seed-popular.js
backend/src/services/: mixGenerator.js  scanner.js  ytdlp.js
desktop/: BUILD.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
frontend/: Dockerfile  generate-cert.sh  index.html  nginx.conf  package.json  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/Layout/: Layout.jsx
frontend/src/components/Player/: Player.jsx
frontend/src/components/Sidebar/: Sidebar.jsx
frontend/src/lib/: crypto.js
frontend/src/pages/Admin/: Admin.jsx
frontend/src/pages/Home/: Home.jsx
frontend/src/pages/Import/: Import.jsx
frontend/src/pages/Login/: Login.jsx
frontend/src/pages/Stats/: Stats.jsx
frontend/src/pages/YouTube/: YouTube.jsx
frontend/src/store/: authStore.js  playerStore.js  useFeaturedStore.js  useMixStore.js  useRadioStore.js  userDataStore.js
